force-app/main/default/objects/Integration_Last_Run_Time__c/Integration_Last_Run_Time__c.object-meta.xml
<CustomObject>
    <description>Used for storing the dates and times of when the job last had executed successfully.</description>
    <label>Integration Last Run Time</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>ILRT</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration Last Run Times</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>