force-app/main/default/objects/Integration_Last_Run_Time__c/fields/Account_Parent_View_AuditDate__c.field-meta.xml
<CustomField>
    <fullName>Account_Parent_View_AuditDate__c</fullName>
    <inlineHelpText>Date field stored to keep the latest date that integration has been executed on the AudtDate field in the Parent View</inlineHelpText>
    <label>Account Parent View AuditDate</label>
    <type>DateTime</type>
</CustomField>