force-app/main/default/objects/Integration_Last_Run_Time__c/fields/Account_ShipTo_View_AuditDateSalesPerson__c.field-meta.xml
<CustomField>
    <fullName>Account_ShipTo_View_AuditDateSalesPerson__c</fullName>
    <inlineHelpText>Date field stored to keep the latest date that integration has been executed based on the AudtDateSalesPerson field for ShipTo View.</inlineHelpText>
    <label>Account ShipTo View AuditDateSalesPerson</label>
    <type>DateTime</type>
</CustomField>