force-app/main/default/objects/Integration_Last_Run_Time__c/fields/Accounts_SalesforceToAccPac__c.field-meta.xml
<CustomField>
    <fullName>Accounts_SalesforceToAccPac__c</fullName>
    <description>Salesforce To AccPac Staging Table</description>
    <inlineHelpText>Last time a records were pushed newly created or modified records from Salesforce To AccPac Staging Table</inlineHelpText>
    <label>Accounts - Salesforce to AccPac</label>
    <type>DateTime</type>
</CustomField>