force-app/main/default/objects/Integration_Last_Run_Time__c/fields/Notification_Time_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Notification_Time_Stamp__c</fullName>
    <description>Field used for testing time based workflow. (delete later)</description>
    <label>Notification Time Stamp</label>
    <type>DateTime</type>
</CustomField>