force-app/main/default/objects/Integration_Last_Run_Time__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Accounts_SalesforceToAccPac__c</columns>
    <columns>Account_Parent_View_AuditDate__c</columns>
    <columns>Account_Parent_View_AuditDateSalesPerson__c</columns>
    <columns>Account_ShipTo_View_AuditDate__c</columns>
    <columns>Account_ShipTo_View_AuditDateSalesPerson__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>