force-app/main/default/objects/Integration_Last_Run_Time__c/listViews/Current_Load.listView-meta.xml
<ListView>
    <fullName>Current_Load</fullName>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Current Load</label>
</ListView>